<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_popular">

    <fragment
        android:id="@+id/nav_fav"
        android:name="es.uniovi.eii.sdm.ui.home.FavFragment"
        android:label="@string/menu_fav"
        tools:layout="@layout/fragment_fav" />

    <fragment
        android:id="@+id/nav_popular"
        android:name="es.uniovi.eii.sdm.ui.gallery.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="es.uniovi.eii.sdm.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>